Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -86,5 +86,6 @@
   "sn22.87:8.19": "Daran habe ich keinen Zweifel. ",
   "sn22.87:8.20": "Ich bin sicher, dass das, was unbeständig ist, Leiden ist. ",
   "sn22.87:8.21": "Und ich bin sicher, dass ich kein Begehren, kein Sehnen und keine Zuneigung habe zu dem, was unbeständig und Leiden ist und zugrunde gehen muss. ",
+  "sn22.87:8.22": "Gefühl ist unbeständig … ",
   "sn22.87:8.26": "Wahrnehmung ist unbeständig … "
 }
