--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -88,5 +88,5 @@
   "sn22.87:8.21": "Und ich bin sicher, dass ich kein Begehren, kein Sehnen und keine Zuneigung habe zu dem, was unbeständig und Leiden ist und zugrunde gehen muss. ",
   "sn22.87:8.22": "Gefühl ist unbeständig … ",
   "sn22.87:8.26": "Wahrnehmung ist unbeständig … ",
-  "sn22.87:8.27": "Entscheidungen sind unbeständig. "
+  "sn22.87:8.27": "Entscheidungen sind unbeständig … "
 }
