--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -90,5 +90,6 @@
   "sn22.87:8.26": "Wahrnehmung ist unbeständig … ",
   "sn22.87:8.27": "Entscheidungen sind unbeständig … ",
   "sn22.87:8.31": "Bewusstsein ist unbeständig. ",
-  "sn22.87:8.32": "Daran habe ich keinen Zweifel. "
+  "sn22.87:8.32": "Daran habe ich keinen Zweifel. ",
+  "sn22.87:8.33": "Ich bin sicher, dass das, was unbeständig ist, Leiden ist. "
 }
