--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -91,5 +91,6 @@
   "sn22.87:8.27": "Entscheidungen sind unbeständig … ",
   "sn22.87:8.31": "Bewusstsein ist unbeständig. ",
   "sn22.87:8.32": "Daran habe ich keinen Zweifel. ",
-  "sn22.87:8.33": "Ich bin sicher, dass das, was unbeständig ist, Leiden ist. "
+  "sn22.87:8.33": "Ich bin sicher, dass das, was unbeständig ist, Leiden ist. ",
+  "sn22.87:8.34": "Und ich bin sicher, dass ich kein Begehren, kein Sehnen und keine Zuneigung habe zu dem, was unbeständig und Leiden ist und zugrunde gehen muss.‘“ "
 }
