--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -95,5 +95,6 @@
   "sn22.87:8.34": "Und ich bin sicher, dass ich kein Begehren, kein Sehnen und keine Zuneigung habe zu dem, was unbeständig und Leiden ist und zugrunde gehen muss.‘“ ",
   "sn22.87:8.35": "„Ja, werter Freund“, antworteten diese Mönche und Nonnen und gingen. ",
   "sn22.87:8.36": "Und nicht lange, nachdem diese Mönche und Nonnen gegangen waren, schlitzte sich der Ehrwürdige Vakkali die Pulsadern auf. ",
-  "sn22.87:9.1": "Da gingen diese Mönche und Nonnen zum Buddha, verbeugten sich, setzten sich zur Seite hin und sagten überbrachten Vakkalis Botschaft. "
+  "sn22.87:9.1": "Da gingen diese Mönche und Nonnen zum Buddha, verbeugten sich, setzten sich zur Seite hin und sagten überbrachten Vakkalis Botschaft. ",
+  "sn22.87:10.1": "Da sagte der Buddha zu den Mönchen und Nonnen: "
 }
