--- a/translation/de/sabbamitta/sutta/sn/sn4/sn4.23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn4/sn4.23_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "sn4.23:7.3": "Nachdem er das Verlangen mit Stumpf und Stiel ausgerissen hat, ",
   "sn4.23:7.4": "ist Godhika erloschen.“ ",
   "sn4.23:8.1": "Dann sagte der Buddha zu den Mönchen und Nonnen: ",
-  "sn4.23:8.2": "„Kommt, Mönche und Nonnen, lasst uns zum Schwarzen Felsen an den Hängen des Isigili gehen, wo Godhika, der aus einer guten Familie kam, sich die Pulsadern aufgeschlitzt hat.“ ",
+  "sn4.23:8.2": "„Kommt, Mönche und Nonnen, lasst uns zum Schwarzen Felsen an den Hängen des Isigili gehen, wo Godhika, der ehrbare Mensch, sich die Pulsadern aufgeschlitzt hat.“ ",
   "sn4.23:8.3": "„Ja, Herr“, antworteten sie. ",
   "sn4.23:9.1": "Und der Buddha ging zusammen mit mehreren Mönchen und Nonnen zum Schwarzen Felsen an den Hängen des Isigili. ",
   "sn4.23:9.2": "Der Buddha sah Godhika von Weitem auf seiner Liege liegen, da er die Aggregate abgelegt hatte. ",
