Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -98,5 +98,6 @@
   "sn22.87:9.1": "Da gingen diese Mönche und Nonnen zum Buddha, verbeugten sich, setzten sich zur Seite hin und sagten überbrachten Vakkalis Botschaft. ",
   "sn22.87:10.1": "Da sagte der Buddha zu den Mönchen und Nonnen: ",
   "sn22.87:10.2": "„Kommt, Mönche und Nonnen, lasst uns zum Schwarzen Felsen an den Hängen des Isigili gehen, ",
-  "sn22.87:10.3": "wo Vakkali, der ehrbare Mensch, sich die Pulsadern aufgeschlitzt hat.“ "
+  "sn22.87:10.3": "wo Vakkali, der ehrbare Mensch, sich die Pulsadern aufgeschlitzt hat.“ ",
+  "sn22.87:10.4": "„Ja, Herr“, antworteten sie. "
 }
