--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -99,5 +99,6 @@
   "sn22.87:10.1": "Da sagte der Buddha zu den Mönchen und Nonnen: ",
   "sn22.87:10.2": "„Kommt, Mönche und Nonnen, lasst uns zum Schwarzen Felsen an den Hängen des Isigili gehen, ",
   "sn22.87:10.3": "wo Vakkali, der ehrbare Mensch, sich die Pulsadern aufgeschlitzt hat.“ ",
-  "sn22.87:10.4": "„Ja, Herr“, antworteten sie. "
+  "sn22.87:10.4": "„Ja, Herr“, antworteten sie. ",
+  "sn22.87:10.5": "Und der Buddha ging zusammen mit mehreren Mönchen und Nonnen zum Schwarzen Felsen an den Hängen des Isigili. "
 }
