--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -101,5 +101,6 @@
   "sn22.87:10.3": "wo Vakkali, der ehrbare Mensch, sich die Pulsadern aufgeschlitzt hat.“ ",
   "sn22.87:10.4": "„Ja, Herr“, antworteten sie. ",
   "sn22.87:10.5": "Und der Buddha ging zusammen mit mehreren Mönchen und Nonnen zum Schwarzen Felsen an den Hängen des Isigili. ",
-  "sn22.87:10.6": "Der Buddha sah Vakkali von Weitem auf seiner Liege liegen, die Aggregate abgelegt. "
+  "sn22.87:10.6": "Der Buddha sah Vakkali von Weitem auf seiner Liege liegen, die Aggregate abgelegt. ",
+  "sn22.87:11.1": "Zu der Zeit nun zog eine schwarze Rauchwolke nach Osten, nach Westen, nach Norden, nach Süden, nach oben, nach unten und in die Zwischenräume. "
 }
