Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -104,5 +104,6 @@
   "sn22.87:10.6": "Der Buddha sah Vakkali von Weitem auf seiner Liege liegen, die Aggregate abgelegt. ",
   "sn22.87:11.1": "Zu der Zeit nun zog eine schwarze Rauchwolke nach Osten, nach Westen, nach Norden, nach Süden, nach oben, nach unten und in die Zwischenräume. ",
   "sn22.87:11.2": "Da sagte der Buddha zu den Mönchen und Nonnen: ",
-  "sn22.87:11.3": "„Mönche und Nonnen, seht ihr diese schwarze Rauchwolke, die nach Osten, nach Westen, nach Norden, nach Süden, nach oben, nach unten und in die Zwischenräume zieht?“ "
+  "sn22.87:11.3": "„Mönche und Nonnen, seht ihr diese schwarze Rauchwolke, die nach Osten, nach Westen, nach Norden, nach Süden, nach oben, nach unten und in die Zwischenräume zieht?“ ",
+  "sn22.87:11.4": "„Ja, Herr.“ "
 }
