Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -106,5 +106,6 @@
   "sn22.87:11.2": "Da sagte der Buddha zu den Mönchen und Nonnen: ",
   "sn22.87:11.3": "„Mönche und Nonnen, seht ihr diese schwarze Rauchwolke, die nach Osten, nach Westen, nach Norden, nach Süden, nach oben, nach unten und in die Zwischenräume zieht?“ ",
   "sn22.87:11.4": "„Ja, Herr.“ ",
-  "sn22.87:11.5": "„Das ist Māra der Böse, der nach Vakkalis Bewusstsein sucht: "
+  "sn22.87:11.5": "„Das ist Māra der Böse, der nach Vakkalis Bewusstsein sucht: ",
+  "sn22.87:11.6": "‚Wo ist Vakkalis Bewusstsein verankert?‘ "
 }
