--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -73,7 +73,7 @@
   "sn22.87:7.10": "Dein Tod wird kein schlechter sein; dein Sterben wird kein schlechtes sein.“‘“ ",
   "sn22.87:7.11": "„Ja, Herr“, antworteten diese Mönche und Nonnen. Sie gingen zum Ehrwürdigen Vakkali und sagten zu ihm: ",
   "sn22.87:7.12": "„Höre, Vakkali, was der Buddha und zwei Gottheiten gesagt haben.“ ",
-  "sn22.87:8.1": "Da wandte sich an seine Pfleger: ",
+  "sn22.87:8.1": "Da wandte Vakkali sich an seine Pfleger: ",
   "sn22.87:8.2": "„Bitte, werte Freunde, helft mir von meiner Liege. ",
   "sn22.87:8.3": "Wie könnte es angehen, dass jemand wie ich auf einem hohen Sitz sitzt, wenn er der Anleitung des Buddha zuhört?“ ",
   "sn22.87:8.4": "„Ja, werter Freund“, antworteten diese Mönche. Und sie halfen ihm von seiner Liege. ",
