Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -428,7 +428,7 @@
   "pli-tv-kd14:7.1.11": "“You shouldn’t do legal procedures—",
   "pli-tv-kd14:7.1.12": "condemnation, demotion, banishment, reconciliation, or ejection—against monks without their admission. ",
   "pli-tv-kd14:7.1.13": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd14:8.1.2": "And how’s acting according to what has been admitted illegitimate? ",
+  "pli-tv-kd14:8.1.2": "And how’s acting according to what’s been admitted illegitimate? ",
   "pli-tv-kd14:8.1.3": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.1.4": "The Sangha, several monks, or a single monk accuses him, saying, ",
   "pli-tv-kd14:8.1.5": "‘Venerable, you've committed an offense entailing expulsion.’ ",
