--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -435,7 +435,7 @@
   "pli-tv-kd14:8.1.6": "He says, ",
   "pli-tv-kd14:8.1.7": "‘I haven’t committed an offense entailing expulsion, but one entailing suspension.’ ",
   "pli-tv-kd14:8.1.8": "If the Sangha makes him act according to an offense entailing suspension, ",
-  "pli-tv-kd14:8.1.9": "then that acting according to what has been admitted is illegitimate. ",
+  "pli-tv-kd14:8.1.9": "then that acting according to what’s been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.10": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.1.11": "The Sangha, several monks, or a single monk accuses him, saying, ",
   "pli-tv-kd14:8.1.12": "‘Venerable, you've committed an offense entailing expulsion.’ ",
