--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -446,7 +446,7 @@
   "pli-tv-kd14:8.1.17": "but an offense of wrong conduct … ",
   "pli-tv-kd14:8.1.18": "but an offense of wrong speech.’ ",
   "pli-tv-kd14:8.1.19": "If the Sangha makes him act according to an offense of wrong speech, ",
-  "pli-tv-kd14:8.1.20": "then that acting according to what has been admitted is illegitimate. ",
+  "pli-tv-kd14:8.1.20": "then that acting according to what’s been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.21": "It may be that a monk has committed an offense entailing suspension … ",
   "pli-tv-kd14:8.1.22": "a serious offense … ",
   "pli-tv-kd14:8.1.23": "an offense entailing confession … ",
