Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -458,7 +458,7 @@
   "pli-tv-kd14:8.1.29": "He says, ",
   "pli-tv-kd14:8.1.30": "‘I haven’t committed an offense of wrong speech, but an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.1.31": "If the Sangha makes him act according to an offense entailing expulsion, ",
-  "pli-tv-kd14:8.1.32": "then that acting according to what has been admitted is illegitimate. ",
+  "pli-tv-kd14:8.1.32": "then that acting according to what’s been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.33": "It may be that a monk has committed an offense of wrong speech. ",
   "pli-tv-kd14:8.1.34": "The Sangha, several monks, or a single monk accuses him, saying, ",
   "pli-tv-kd14:8.1.35": "‘Venerable, you've committed an offense of wrong speech.’ ",
