Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -469,8 +469,8 @@
   "pli-tv-kd14:8.1.40": "but an offense entailing acknowledgment … ",
   "pli-tv-kd14:8.1.41": "but an offense of wrong conduct.’ ",
   "pli-tv-kd14:8.1.42": "If the Sangha makes him act according to an offense of wrong conduct, ",
-  "pli-tv-kd14:8.1.43": "then that acting according to what has been admitted is illegitimate. ",
-  "pli-tv-kd14:8.2.2": "And how’s acting according to what has been admitted legitimate? ",
+  "pli-tv-kd14:8.1.43": "then that acting according to what’s been admitted is illegitimate. ",
+  "pli-tv-kd14:8.2.2": "And how’s acting according to what’s been admitted legitimate? ",
   "pli-tv-kd14:8.2.3": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.2.4": "The Sangha, several monks, or a single monk accuses him, saying ",
   "pli-tv-kd14:8.2.5": "‘Venerable, you've committed an offense entailing expulsion.’ ",
