Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -477,7 +477,7 @@
   "pli-tv-kd14:8.2.6": "He says, ",
   "pli-tv-kd14:8.2.7": "‘Yes, I’ve committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.2.8": "If the Sangha makes him act according to an offense entailing expulsion, ",
-  "pli-tv-kd14:8.2.9": "then that acting according to what has been admitted is legitimate. ",
+  "pli-tv-kd14:8.2.9": "then that acting according to what’s been admitted is legitimate. ",
   "pli-tv-kd14:8.2.10": "It may be that a monk has committed an offense entailing suspension … ",
   "pli-tv-kd14:8.2.11": "a serious offense … ",
   "pli-tv-kd14:8.2.12": "an offense entailing confession … ",
