Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1207,7 +1207,7 @@
   "pli-tv-kd14:14.29.11": "As he tries to free himself, the accusing monk presses him further: ",
   "pli-tv-kd14:14.29.12": "‘Come on, Venerable, try again to  remember whether you’ve committed such-and-such a heavy offense.’ ",
   "pli-tv-kd14:14.29.13": "He replies, ",
-  "pli-tv-kd14:14.29.14": "‘I don’t remember committing a heavy offense. ",
+  "pli-tv-kd14:14.29.14": "‘I don’t remember committing such an offense, ",
   "pli-tv-kd14:14.29.15": "But I do remember committing such-and-such a minor offense.’ ",
   "pli-tv-kd14:14.29.16": "As he tries to free himself, the accusing monk presses him further: ",
   "pli-tv-kd14:14.29.17": "‘Come on, Venerable, think properly whether you remember committing such-and-such a heavy offense.’ ",
