--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1208,12 +1208,12 @@
   "pli-tv-kd14:14.29.12": "‘Come on, Venerable, try again to  remember whether you’ve committed such-and-such a heavy offense.’ ",
   "pli-tv-kd14:14.29.13": "He replies, ",
   "pli-tv-kd14:14.29.14": "‘I don’t remember committing such an offense, ",
-  "pli-tv-kd14:14.29.15": "But I do remember committing such-and-such a minor offense.’ ",
+  "pli-tv-kd14:14.29.15": "but I do remember committing such-and-such a minor offense.’ ",
   "pli-tv-kd14:14.29.16": "As he tries to free himself, the accusing monk presses him further: ",
-  "pli-tv-kd14:14.29.17": "‘Come on, Venerable, think properly whether you remember committing such-and-such a heavy offense.’ ",
+  "pli-tv-kd14:14.29.17": "‘Come on, Venerable, try harder to  remember whether you’ve committed such-and-such a heavy offense.’ ",
   "pli-tv-kd14:14.29.18": "He replies, ",
   "pli-tv-kd14:14.29.19": "‘I’ve admitted that I’ve committed this minor offense without being asked. ",
-  "pli-tv-kd14:14.29.20": "So when asked about such-and-such a heavy offense, why would I not admit it?’ ",
+  "pli-tv-kd14:14.29.20": "So when asked about a heavy offense, why wouldn’t I admit it?’ ",
   "pli-tv-kd14:14.29.21": "The accusing monk says, ",
   "pli-tv-kd14:14.29.22": "‘But you didn’t admit that you had committed this minor offense without being asked. ",
   "pli-tv-kd14:14.29.23": "So when asked about such-and-such a heavy offense, why would you admit it? ",
