Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1216,8 +1216,8 @@
   "pli-tv-kd14:14.29.20": "So when asked about a heavy offense, why wouldn’t I admit it?’ ",
   "pli-tv-kd14:14.29.21": "The accusing monk says, ",
   "pli-tv-kd14:14.29.22": "‘But you didn’t admit that you had committed this minor offense without being asked. ",
-  "pli-tv-kd14:14.29.23": "So when asked about such-and-such a heavy offense, why would you admit it? ",
-  "pli-tv-kd14:14.29.24": "Come on, Venerable, think properly whether you remember committing such-and-such a heavy offense.’ ",
+  "pli-tv-kd14:14.29.23": "So when asked about a heavy offense, why would you admit it? ",
+  "pli-tv-kd14:14.29.24": "Come on, Venerable, try harder to  remember whether you’ve committed such-and-such a heavy offense.’ ",
   "pli-tv-kd14:14.29.25": "He then says, ",
   "pli-tv-kd14:14.29.26": "‘I remember committing such-and-such a heavy offense entailing expulsion or bordering on expulsion. ",
   "pli-tv-kd14:14.29.27": "When I said that I didn’t remember, I spoke playfully, I spoke too fast.’ ",
