Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1244,7 +1244,7 @@
   "pli-tv-kd14:14.29.50": "This is the meaning of ‘by further penalty’: ",
   "pli-tv-kd14:14.29.51": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of further penalty. ",
   "pli-tv-kd14:14.29.53": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
-  "pli-tv-kd14:14.29.54": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
+  "pli-tv-kd14:14.29.54": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession.” ",
   "pli-tv-kd14:14.30.0": "9.8 Acting according to what has been admitted ",
   "pli-tv-kd14:14.30.2": "“There are three principles for settling a legal issue arising from an offense: ",
   "pli-tv-kd14:14.30.3": "resolution face-to-face, acting according to what has been admitted, and covering over as if with grass. ",
