Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1247,12 +1247,12 @@
   "pli-tv-kd14:14.29.54": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession.” ",
   "pli-tv-kd14:14.30.0": "9.8 Acting according to what has been admitted ",
   "pli-tv-kd14:14.30.2": "“There are three principles for settling a legal issue arising from an offense: ",
-  "pli-tv-kd14:14.30.3": "resolution face-to-face, acting according to what has been admitted, and covering over as if with grass. ",
-  "pli-tv-kd14:14.30.4": "Can it be that a legal issue arising from an accusation should be settled ",
+  "pli-tv-kd14:14.30.3": "resolution face-to-face, acting according to what’s been admitted, and covering over as if with grass. ",
+  "pli-tv-kd14:14.30.4": "Is it possible that a legal issue arising from an accusation should be settled ",
   "pli-tv-kd14:14.30.5": "not by covering over as if with grass, ",
-  "pli-tv-kd14:14.30.6": "but by resolution face-to-face and by acting according to what has been admitted? ",
-  "pli-tv-kd14:14.30.7": "It can. ",
-  "pli-tv-kd14:14.30.8": "How’s that? ",
+  "pli-tv-kd14:14.30.6": "but by resolution face-to-face and by acting according to what’s been admitted? ",
+  "pli-tv-kd14:14.30.7": "It is. ",
+  "pli-tv-kd14:14.30.8": "How? ",
   "pli-tv-kd14:14.30.9": "It may be that a monk has committed a light offense. ",
   "pli-tv-kd14:14.30.10": "That monk should approach a single monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd14:14.30.11": "‘I’ve committed such-and-such an offense. ",
