Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1258,7 +1258,7 @@
   "pli-tv-kd14:14.30.11": "‘I’ve committed such-and-such an offense. ",
   "pli-tv-kd14:14.30.12": "I confess it.’ ",
   "pli-tv-kd14:14.30.13": "—",
-  "pli-tv-kd14:14.30.14": "‘Do you recognize the offense?’ —",
+  "pli-tv-kd14:14.30.14": "‘Do you recognize that offense?’ —",
   "pli-tv-kd14:14.30.15": "‘Yes, I recognize it.’ —",
   "pli-tv-kd14:14.30.16": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd14:14.30.17": "This is called the resolution of a legal issue. ",
