--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1267,17 +1267,17 @@
   "pli-tv-kd14:14.30.21": "Face-to-face with the Teaching, the Monastic Law, and the persons concerned. This is the meaning of face-to-face with the Teaching and the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.30.22": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.30.23": "both the one who confesses and the one he confesses to are present. ",
-  "pli-tv-kd14:14.30.25": "This is the meaning of acting according to what has been admitted: ",
-  "pli-tv-kd14:14.30.26": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of acting according to what has been admitted. ",
+  "pli-tv-kd14:14.30.25": "This is the meaning of acting according to what’s been admitted: ",
+  "pli-tv-kd14:14.30.26": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of acting according to what’s been admitted. ",
   "pli-tv-kd14:14.30.28": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
-  "pli-tv-kd14:14.31.1": "If this is what happens, all is well. ",
+  "pli-tv-kd14:14.31.1": "“If this is what happens, all’s well. ",
   "pli-tv-kd14:14.31.2": "If not, that monk should approach several monks, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd14:14.31.3": "‘Venerables, I’ve committed such-and-such an offense. ",
   "pli-tv-kd14:14.31.4": "I confess it.’ ",
   "pli-tv-kd14:14.31.5": "A competent and capable monk should then inform those monks: ",
   "pli-tv-kd14:14.31.6": "‘Please, Venerables, I ask you to listen. ",
   "pli-tv-kd14:14.31.7": "The monk so-and-so remembers an offense—he reveals it, makes it plain, and confesses it. ",
-  "pli-tv-kd14:14.31.8": "If it seems appropriate to you, I’ll receive the confession.’ ",
+  "pli-tv-kd14:14.31.8": "If it seems appropriate to you, I’ll receive his confession.’ ",
   "pli-tv-kd14:14.31.9": "And he should say: ",
   "pli-tv-kd14:14.31.10": "‘Do you recognize the offense?’ —",
   "pli-tv-kd14:14.31.11": "‘Yes, I recognize it.’ —",
