Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1279,17 +1279,17 @@
   "pli-tv-kd14:14.31.7": "The monk so-and-so remembers an offense—he reveals it, makes it plain, and confesses it. ",
   "pli-tv-kd14:14.31.8": "If it seems appropriate to you, I’ll receive his confession.’ ",
   "pli-tv-kd14:14.31.9": "And he should say: ",
-  "pli-tv-kd14:14.31.10": "‘Do you recognize the offense?’ —",
+  "pli-tv-kd14:14.31.10": "‘Do you recognize that offense?’ —",
   "pli-tv-kd14:14.31.11": "‘Yes, I recognize it.’ —",
   "pli-tv-kd14:14.31.12": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd14:14.31.13": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.31.15": "It’s been resolved face-to-face and by acting according to what has been admitted. ",
+  "pli-tv-kd14:14.31.15": "It’s been resolved face-to-face and by acting according to what’s been admitted. ",
   "pli-tv-kd14:14.31.16": "Face-to-face with what? ",
   "pli-tv-kd14:14.31.17": "Face-to-face with the Teaching, the Monastic Law, and the persons concerned. This is the meaning of face-to-face with the Teaching and the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.31.18": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.31.19": "both the one who confesses and the one he confesses to are present. ",
-  "pli-tv-kd14:14.31.21": "This is the meaning of acting according to what has been admitted: ",
-  "pli-tv-kd14:14.31.22": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of acting according to what has been admitted. ",
+  "pli-tv-kd14:14.31.21": "This is the meaning of acting according to what’s been admitted: ",
+  "pli-tv-kd14:14.31.22": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of acting according to what’s been admitted. ",
   "pli-tv-kd14:14.31.24": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.32.1": "If this is what happens, all is well. ",
   "pli-tv-kd14:14.32.2": "If not, that monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
