Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1291,16 +1291,16 @@
   "pli-tv-kd14:14.31.21": "This is the meaning of acting according to what’s been admitted: ",
   "pli-tv-kd14:14.31.22": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of acting according to what’s been admitted. ",
   "pli-tv-kd14:14.31.24": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
-  "pli-tv-kd14:14.32.1": "If this is what happens, all is well. ",
+  "pli-tv-kd14:14.32.1": "“If this is what happens, all’s well. ",
   "pli-tv-kd14:14.32.2": "If not, that monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd14:14.32.3": "‘Venerables, I’ve committed such-and-such an offense. ",
   "pli-tv-kd14:14.32.4": "I confess it.’ ",
   "pli-tv-kd14:14.32.5": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:14.32.6": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.32.7": "The monk so-and-so remembers an offense—he reveals it, makes it plain, and confesses it. ",
-  "pli-tv-kd14:14.32.8": "If it seems appropriate to the Sangha, I’ll receive the confession.’ ",
+  "pli-tv-kd14:14.32.8": "If it seems appropriate to the Sangha, I’ll receive his confession.’ ",
   "pli-tv-kd14:14.32.9": "And he should say: ",
-  "pli-tv-kd14:14.32.10": "‘Do you recognize the offense?’ —",
+  "pli-tv-kd14:14.32.10": "‘Do you recognize that offense?’ —",
   "pli-tv-kd14:14.32.11": "‘Yes, I recognize it.’ —",
   "pli-tv-kd14:14.32.12": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd14:14.32.13": "This is called the resolution of a legal issue. ",
