--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1345,7 +1345,7 @@
   "pli-tv-kd14:14.33.34": "While we were arguing and disputing, we did and said many things unworthy of monastics. ",
   "pli-tv-kd14:14.33.35": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
   "pli-tv-kd14:14.33.36": "For the benefit of these venerables and myself, I confess both their and my own offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
-  "pli-tv-kd14:14.33.37": "Any monk who approves of confessing our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders, should remain silent. ",
+  "pli-tv-kd14:14.33.37": "Any monk who approves of confessing our offenses in the midst of the Sangha by covering over as if with grass should remain silent. ",
   "pli-tv-kd14:14.33.38": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.33.39": "We have confessed our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
   "pli-tv-kd14:14.33.40": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
