Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1366,7 +1366,7 @@
   "pli-tv-kd14:14.33.55": "both the one who confesses and the one he confesses to are present. ",
   "pli-tv-kd14:14.33.57": "This is the meaning of covering over as if with grass: ",
   "pli-tv-kd14:14.33.58": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of covering over as if with grass. ",
-  "pli-tv-kd14:14.33.60": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
+  "pli-tv-kd14:14.33.60": "When a legal issue has been resolved like this, if a receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.33.61": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
   "pli-tv-kd14:14.34.2": "There’s one way of settling a legal issue arising from business: ",
   "pli-tv-kd14:14.34.3": "resolution face-to-face.” ",
