Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -242,7 +242,7 @@
   "ja-name:241.ja217": "Die unschuldige Tochter Seggu ",
   "ja-name:242.ja218": "Der betrügerische Kaufmann ",
   "ja-name:243.ja219": "Verachtet ",
-  "ja-name:244.ja220": "Der Prediger mit Namen Banner der Lehre ",
+  "ja-name:244.ja220": "Der Brahmane mit Namen Banner der Lehre ",
   "ja-name:245.ja-kasavavagga": "Das Kapitel mit der ockerfarbenen Robe ",
   "ja-name:246.ja221": "Die ockerfarbene Robe ",
   "ja-name:247.ja222": "Der Affe Nandiya ",
