--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -246,7 +246,7 @@
   "ja-name:245.ja-kasavavagga": "Das Kapitel mit der ockerfarbenen Robe ",
   "ja-name:246.ja221": "Die ockerfarbene Robe ",
   "ja-name:247.ja222": "Der Affe Nandiya ",
-  "ja-name:248.ja223": "Das Fleischpaket ",
+  "ja-name:248.ja223": "Das Essenspaket ",
   "ja-name:249.ja224": "Das Krokodil ",
   "ja-name:250.ja225": "Lob der Geduld ",
   "ja-name:251.ja226": "Die Eule ",
