--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.88:0.1": "Verbundene Lehrreden 22.88 "
+  "sn22.88:0.1": "Verbundene Lehrreden 22.88 ",
+  "sn22.88:0.2": "9. Das Kapitel mit Ordensältesten "
 }
