--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.88:0.1": "Verbundene Lehrreden 22.88 ",
   "sn22.88:0.2": "9. Das Kapitel mit Ordensältesten ",
-  "sn22.88:0.3": "Mit Assaji "
+  "sn22.88:0.3": "Mit Assaji ",
+  "sn22.88:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
 }
