--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.88:0.2": "9. Das Kapitel mit Ordensältesten ",
   "sn22.88:0.3": "Mit Assaji ",
   "sn22.88:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
-  "sn22.88:1.2": "Zu dieser Zeit nun hielt sich der Ehrwürdige Assaji in einem Kloster auf, das von einem Kassapa erbaut war, und er war mitgenommen, leidend, schwer krank. "
+  "sn22.88:1.2": "Zu dieser Zeit nun hielt sich der Ehrwürdige Assaji in einem Kloster auf, das von einem Kassapa erbaut war, und er war mitgenommen, leidend, schwer krank. ",
+  "sn22.88:1.3": "Da wandte er sich an seine Pfleger: "
 }
