--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.88:0.3": "Mit Assaji ",
   "sn22.88:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
   "sn22.88:1.2": "Zu dieser Zeit nun hielt sich der Ehrwürdige Assaji in einem Kloster auf, das von einem Kassapa erbaut war, und er war mitgenommen, leidend, schwer krank. ",
-  "sn22.88:1.3": "Da wandte er sich an seine Pfleger: "
+  "sn22.88:1.3": "Da wandte er sich an seine Pfleger: ",
+  "sn22.88:1.4": "„Bitte, werte Freunde, geht zum Buddha und beugt in meinem Namen euren Kopf zu seinen Füßen. Sagt zu ihm: "
 }
