Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.88:1.3": "Da wandte er sich an seine Pfleger: ",
   "sn22.88:1.4": "„Bitte, werte Freunde, geht zum Buddha und beugt in meinem Namen euren Kopf zu seinen Füßen. Sagt zu ihm: ",
   "sn22.88:1.5": "‚Herr, der Mönch Assaji ist mitgenommen, leidend, schwer krank. ",
-  "sn22.88:1.6": "Er beugt seinen Kopf zu deinen Füßen.‘ "
+  "sn22.88:1.6": "Er beugt seinen Kopf zu deinen Füßen.‘ ",
+  "sn22.88:1.7": "Und dann sagt: "
 }
