--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.88:1.5": "‚Herr, der Mönch Assaji ist mitgenommen, leidend, schwer krank. ",
   "sn22.88:1.6": "Er beugt seinen Kopf zu deinen Füßen.‘ ",
   "sn22.88:1.7": "Und dann sagt: ",
-  "sn22.88:1.8": "‚Herr, bitte geh aus Anteilnahme zu dem Mönch Assaji.‘“ "
+  "sn22.88:1.8": "‚Herr, bitte geh aus Anteilnahme zu dem Mönch Assaji.‘“ ",
+  "sn22.88:1.9": "„Ja, werter Freund“, antworteten diese Mönche. Sie erhoben sich von ihren Sitzen, gingen zum Buddha und überbrachten ihm die Botschaft. "
 }
