Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.88:1.9": "„Ja, werter Freund“, antworteten diese Mönche. Sie erhoben sich von ihren Sitzen, gingen zum Buddha und überbrachten ihm die Botschaft. ",
   "sn22.88:1.12": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "sn22.88:2.1": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zum Ehrwürdigen Assaji. ",
-  "sn22.88:2.2": "Der Ehrwürdige Assaji sah den Buddha von Weitem kommen "
+  "sn22.88:2.2": "Der Ehrwürdige Assaji sah den Buddha von Weitem kommen ",
+  "sn22.88:2.3": "und versuchte, sich auf seiner Liege aufzurichten. "
 }
