--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.88:2.3": "und versuchte, sich auf seiner Liege aufzurichten. ",
   "sn22.88:2.4": "Aber der Buddha sagte zu ihm: ",
   "sn22.88:2.5": "„Es ist gut, Assaji, du brauchst nicht aufzustehen. ",
-  "sn22.88:2.6": "Hier sind Sitze ausgelegt, da werde ich mich hinsetzen.“ "
+  "sn22.88:2.6": "Hier sind Sitze ausgelegt, da werde ich mich hinsetzen.“ ",
+  "sn22.88:2.7": "Er setzte sich auf einen ausgebreiteten Sitz und sagte zu Assaji: "
 }
