Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.88:3.2": "„Ich hoffe, es gibt nichts, was du bereust oder bedauerst?“ ",
   "sn22.88:3.3": "„Tatsächlich, Herr, gibt etwas nicht Geringes, was ich bereue und bedauere.“ ",
   "sn22.88:3.4": "„Ich hoffe, du hast dir wegen deines sittlichen Verhaltens nichts vorzuwerfen?“ ",
-  "sn22.88:3.5": "„Nein, Herr, ich habe mir wegen meines sittlichen Verhaltens nichts vorzuwerfen.“ "
+  "sn22.88:3.5": "„Nein, Herr, ich habe mir wegen meines sittlichen Verhaltens nichts vorzuwerfen.“ ",
+  "sn22.88:3.6": "„Was ist es in diesem Fall, Assaji, das du bereust oder bedauerst?“ "
 }
