--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.88:3.4": "„Ich hoffe, du hast dir wegen deines sittlichen Verhaltens nichts vorzuwerfen?“ ",
   "sn22.88:3.5": "„Nein, Herr, ich habe mir wegen meines sittlichen Verhaltens nichts vorzuwerfen.“ ",
   "sn22.88:3.6": "„Was ist es in diesem Fall, Assaji, das du bereust oder bedauerst?“ ",
-  "sn22.88:3.7": "„Herr, bevor ich krank wurde, meditierte ich, indem ich den körperlichen Ablauf vollständig gestillt hatte. Doch jetzt kann ich keine Versenkung erlangen. "
+  "sn22.88:3.7": "„Herr, bevor ich krank wurde, meditierte ich, indem ich den körperlichen Ablauf vollständig gestillt hatte. Doch jetzt kann ich keine Versenkung erlangen. ",
+  "sn22.88:3.8": "Da ich keine Versenkung erlangen kann, denke ich: "
 }
