--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.88:3.5": "„Nein, Herr, ich habe mir wegen meines sittlichen Verhaltens nichts vorzuwerfen.“ ",
   "sn22.88:3.6": "„Was ist es in diesem Fall, Assaji, das du bereust oder bedauerst?“ ",
   "sn22.88:3.7": "„Herr, bevor ich krank wurde, meditierte ich, indem ich den körperlichen Ablauf vollständig gestillt hatte. Doch jetzt kann ich keine Versenkung erlangen. ",
-  "sn22.88:3.8": "Da ich keine Versenkung erlangen kann, denke ich: "
+  "sn22.88:3.8": "Da ich keine Versenkung erlangen kann, denke ich: ",
+  "sn22.88:3.9": "‚Dass ich nicht verkümmere!‘“ "
 }
