--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -29,5 +29,5 @@
   "sn22.88:3.7": "„Herr, bevor ich krank wurde, meditierte ich, indem ich den körperlichen Ablauf vollständig gestillt hatte. Doch jetzt kann ich keine Versenkung erlangen. ",
   "sn22.88:3.8": "Da ich keine Versenkung erlangen kann, denke ich: ",
   "sn22.88:3.9": "‚Dass ich nicht verkümmere!‘“ ",
-  "sn22.88:3.10": "„Assaji, es gibt Asketen und Brahmanen, für die Versenkung das Wesentliche ist, sie setzen Versenkung mit dem Asketenleben gleich. Sie denken: "
+  "sn22.88:3.10": "„Assaji, es gibt Asketen und Brahmanen, für die Versenkung das Wesentliche ist, sie setzen Versenkung mit dem Asketenleben gleich: "
 }
