Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.88:3.8": "Da ich keine Versenkung erlangen kann, denke ich: ",
   "sn22.88:3.9": "‚Dass ich nicht verkümmere!‘“ ",
   "sn22.88:3.10": "„Assaji, es gibt Asketen und Brahmanen, für die Versenkung das Wesentliche ist, sie setzen Versenkung mit dem Asketenleben gleich: ",
-  "sn22.88:3.11": "‚Dass wir nicht verkümmern!‘ "
+  "sn22.88:3.11": "‚Dass wir nicht verkümmern!‘ ",
+  "sn22.88:4.1": "Was denkst du, Assaji? "
 }
