--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.88:3.9": "‚Dass ich nicht verkümmere!‘“ ",
   "sn22.88:3.10": "„Assaji, es gibt Asketen und Brahmanen, für die Versenkung das Wesentliche ist, sie setzen Versenkung mit dem Asketenleben gleich: ",
   "sn22.88:3.11": "‚Dass wir nicht verkümmern!‘ ",
-  "sn22.88:4.1": "Was denkst du, Assaji? "
+  "sn22.88:4.1": "Was denkst du, Assaji? ",
+  "sn22.88:4.2": "Ist Form beständig oder unbeständig?“ "
 }
