--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.88:3.11": "‚Dass wir nicht verkümmern!‘ ",
   "sn22.88:4.1": "Was denkst du, Assaji? ",
   "sn22.88:4.2": "Ist Form beständig oder unbeständig?“ ",
-  "sn22.88:4.3": "„Unbeständig, Herr.“ … "
+  "sn22.88:4.3": "„Unbeständig, Herr.“ … ",
+  "sn22.88:4.4": "„Ist Bewusstsein beständig oder unbeständig?“ … "
 }
