Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.88:4.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.88:4.3": "„Unbeständig, Herr.“ … ",
   "sn22.88:4.4": "„Ist Bewusstsein beständig oder unbeständig?“ … ",
-  "sn22.88:4.5": "„Daher solltest du jegliche Art … sehen … "
+  "sn22.88:4.5": "„Daher solltest du jegliche Art … sehen … ",
+  "sn22.88:4.6": "Wenn er das sieht … "
 }
