Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.88:4.5": "„Daher solltest du jegliche Art … sehen … ",
   "sn22.88:4.6": "Wenn er das sieht … ",
   "sn22.88:4.7": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
-  "sn22.88:4.8": "Wenn er ein angenehmes Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. "
+  "sn22.88:4.8": "Wenn er ein angenehmes Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. ",
+  "sn22.88:4.9": "Wenn er ein schmerzhaftes Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. "
 }
