Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn22.88:4.8": "Wenn er ein angenehmes Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. ",
   "sn22.88:4.9": "Wenn er ein schmerzhaftes Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. ",
   "sn22.88:4.10": "Wenn er ein neutrales Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. ",
-  "sn22.88:4.11": "Wenn er ein angenehmes Gefühl fühlt, fühlt er es abgelöst. "
+  "sn22.88:4.11": "Wenn er ein angenehmes Gefühl fühlt, fühlt er es abgelöst. ",
+  "sn22.88:4.12": "Wenn er ein schmerzhaftes Gefühl fühlt, fühlt er es abgelöst. "
 }
