Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "sn22.88:4.10": "Wenn er ein neutrales Gefühl fühlt, versteht er, dass es unbeständig ist; er hängt nicht daran und findet kein Vergnügen daran. ",
   "sn22.88:4.11": "Wenn er ein angenehmes Gefühl fühlt, fühlt er es abgelöst. ",
   "sn22.88:4.12": "Wenn er ein schmerzhaftes Gefühl fühlt, fühlt er es abgelöst. ",
-  "sn22.88:4.13": "Wenn er ein neutrales Gefühl fühlt, fühlt er es abgelöst. "
+  "sn22.88:4.13": "Wenn er ein neutrales Gefühl fühlt, fühlt er es abgelöst. ",
+  "sn22.88:4.14": "Wenn er das Ende des Körpers nahen fühlt, weiß er: ‚Ich fühle das Ende des Körpers nahen.‘ Wenn er das Ende des Lebens nahen fühlt, weiß er: ‚Ich fühle das Ende des Lebens nahen.‘ "
 }
