Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.88:4.11": "Wenn er ein angenehmes Gefühl fühlt, fühlt er es abgelöst. ",
   "sn22.88:4.12": "Wenn er ein schmerzhaftes Gefühl fühlt, fühlt er es abgelöst. ",
   "sn22.88:4.13": "Wenn er ein neutrales Gefühl fühlt, fühlt er es abgelöst. ",
-  "sn22.88:4.14": "Wenn er das Ende des Körpers nahen fühlt, weiß er: ‚Ich fühle das Ende des Körpers nahen.‘ Wenn er das Ende des Lebens nahen fühlt, weiß er: ‚Ich fühle das Ende des Lebens nahen.‘ "
+  "sn22.88:4.14": "Wenn er das Ende des Körpers nahen fühlt, weiß er: ‚Ich fühle das Ende des Körpers nahen.‘ Wenn er das Ende des Lebens nahen fühlt, weiß er: ‚Ich fühle das Ende des Lebens nahen.‘ ",
+  "sn22.88:4.15": "Man versteht: ‚Wenn mein Körper auseinanderbricht und mein Leben zu Ende gegangen ist, wird alles Gefühlte, da ich daran kein Vergnügen mehr finde, hier auf der Stelle kühl werden.‘ "
 }
