--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.88_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.88:4.14": "Wenn er das Ende des Körpers nahen fühlt, weiß er: ‚Ich fühle das Ende des Körpers nahen.‘ Wenn er das Ende des Lebens nahen fühlt, weiß er: ‚Ich fühle das Ende des Lebens nahen.‘ ",
   "sn22.88:4.15": "Er versteht: ‚Wenn mein Körper auseinanderbricht und mein Leben zu Ende gegangen ist, wird alles Gefühlte, da ich daran kein Vergnügen mehr finde, hier auf der Stelle kühl werden.‘ ",
   "sn22.88:5.1": "Wie eine Öllampe, die mithilfe von Öl und einem Docht brennt. ",
-  "sn22.88:5.2": "Wenn Öl und Docht aufgebraucht sind, erlischt sie aus Mangel an Nahrung. "
+  "sn22.88:5.2": "Wenn Öl und Docht aufgebraucht sind, erlischt sie aus Mangel an Nahrung. ",
+  "sn22.88:5.3": "Ebenso weiß er, wenn er das Ende des Körpers nahen fühlt: ‚Ich fühle das Ende des Körpers nahen.‘ Wenn er das Ende des Lebens nahen fühlt, weiß er: ‚Ich fühle das Ende des Lebens nahen.‘ "
 }
