Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.89:0.1": "Verbundene Lehrreden 22.89 ",
-  "sn22.89:0.2": "9. Das Kapitel mit Ordensältesten "
+  "sn22.89:0.2": "9. Das Kapitel mit Ordensältesten ",
+  "sn22.89:0.3": "Mit Khemaka "
 }
