--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -699,6 +699,7 @@
   "sn-name:698.sn22.86": "Mit Anurādha ",
   "sn-name:699.sn22.87": "Mit Vakkali ",
   "sn-name:700.sn22.88": "Mit Assaji ",
+  "sn-name:701.sn22.89": "Mit Khemaka ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
   "sn-name:707.sn22.94": "Blumen ",
