--- a/translation/de/sabbamitta/sutta/sn/sn13/sn13.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn13/sn13.5_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn13.5:1.3": "Was meint ihr, Mönche und Nonnen? ",
   "sn13.5:1.4": "Was ist mehr: die sieben Lehmklümpchen in der Größe von Jujubekernen oder die große Erde?“ ",
   "sn13.5:2.1": "„Herr, die große Erde ist viel mehr. ",
-  "sn13.5:2.2": "Die sieben Lehmklümpchen in der Größe von Brustbeeren sind winzig. ",
+  "sn13.5:2.2": "Die sieben Lehmklümpchen in der Größe von Jujubekernen sind winzig. ",
   "sn13.5:2.3": "Verglichen mit der großen Erde reichen sie nicht annähernd an ein Hundertstel heran, nicht an ein Tausendstel oder ein Hunderttausendstel.“ ",
   "sn13.5:2.4": "„Ebenso ist für einen edlen Schüler das Leiden, das vorbei und erledigt ist, viel mehr …“ "
 }
