--- a/translation/de/sabbamitta/sutta/sn/sn13/sn13.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn13/sn13.6_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn13.6:0.2": "1. Das Kapitel über das Erfassen ",
   "sn13.6:0.3": "Die Erde (2) ",
   "sn13.6:1.1": "In Sāvatthī. ",
-  "sn13.6:1.2": "„Mönche und Nonnen, angenommen, die große Erde wäre bis auf sieben Lehmklümpchen in der Größe von Brustbeeren abgetragen und weggespült worden. ",
+  "sn13.6:1.2": "„Mönche und Nonnen, angenommen, die große Erde wäre bis auf sieben Lehmklümpchen in der Größe von Jujubekernen abgetragen und weggespült worden. ",
   "sn13.6:1.3": "Was meint ihr, Mönche und Nonnen? ",
   "sn13.6:1.4": "Was ist mehr: die große Erde, die abgetragen und weggespült wurde, oder die verbliebenen sieben Lehmklümpchen in der Größe von Brustbeeren?“ ",
   "sn13.6:2.1": "„Herr, die große Erde, die abgetragen und weggespült wurde, ist viel mehr. ",
