Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn22.89:7.4": "Ist es Form, oder ist es außerhalb von Form? ",
   "sn22.89:7.5": "Ist es Gefühl … ",
   "sn22.89:7.6": "Wahrnehmung … ",
-  "sn22.89:7.7": "Entscheidungen … "
+  "sn22.89:7.7": "Entscheidungen … ",
+  "sn22.89:7.8": "Bewusstsein, oder ist es außerhalb von Bewusstsein? "
 }
