Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "sn22.89:6.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie sagten: ",
   "sn22.89:7.1": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: ",
   "sn22.89:7.2": "‚Werter Khemaka, die Altehrwürdigen fragen: ",
-  "sn22.89:7.3": "Wovon sprichst du, wenn du ‚ich bin‘ sagst? ",
+  "sn22.89:7.3": "Wovon sprichst du, wenn du „ich bin“ sagst? ",
   "sn22.89:7.4": "Ist es Form, oder ist es außerhalb von Form? ",
   "sn22.89:7.5": "Ist es Gefühl … ",
   "sn22.89:7.6": "Wahrnehmung … ",
